[project]
name = "doughnut_service"
version = "2025.2.3"
description = "Test service for doughnuts"
readme = "README.md"
authors = [
    { name = "Tim Clark", email = "tim.clark@passivuk.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib>=2.177.0",
    "constructs>=10.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
include = ["src"]
